css/main.css
:root {
	--figure-border : 1px solid #C8C8C8;
}

.title-link {
	color : #2980B9;
}

body {
	font-family     : Browallia New, Corbel, Dotum, Euphemia, sans-serif;
	scroll-behavior : smooth;
}

#contact {
	background : #191919;
	color      : #F0F0F0;
}

#contact ul {
	font-size : 2em;
}

#contact .contact-link {
	color : #f0f0f0;
}

#contact-form {
	width : 100%;
}

#contact-form button[type="submit"] {
	background    : #87C0DC;
	border        : none;
	border-radius : 2px;
	cursor        : pointer;
	font-weight   : bold;
	margin        : 1em 0;
	padding       : 1em;
	width         : 100%;
}

#contact-form button[type="submit"]:hover {
	background : #63ADD1;
}

#contact-form input,
#contact-form textarea {
	display : block;
	margin  : 0.5em 0 1em;
	width   : 100%;
}

#contact-form textarea {
	min-height : 10em;
	resize     : vertical;
}

figcaption {
	border-top : 1px solid #C8C8C8;
	border-top : var(--figure-border);
	padding    : 5px;
	text-align : center;
}

figure {
	border : 1px solid #C8C8C8;
	border : var(--figure-border);
	height : 100%;
	margin : 0.25em 0;
}

figure img {
	margin : 0 0 -5px;
	width  : 100%;
}

footer {
	background : #050505;
	color      : white;
	margin     : 0;
	text-align : center;
	width      : 100%;
}

h4 {
	font-size : 2.5em;
}

input,
textarea {
	border        : 2px solid #ccc;
	border-radius : 2px;
	padding       : 0.5em;
}

input:focus,
textarea:focus {
	border : 2px solid #53B0E8;
}

input:invalid {
	border : 2px solid #CB000F;
}

label {
	font-size   : 1.5em;
	font-weight : bold;
}

nav {
	background : #c0392b;
}

nav ul {
	display    : flex;
	font-size  : 1.75em;
	flex-flow  : row nowrap;
	list-style : none;
	margin     : 0;
	padding    : 0;
}

nav ul a {
	color           : #F5F5F5;
	display         : block;
	padding         : 15px;
	text-decoration : none;
	transition      : background 0.2s ease-out;
	transition      : color: 0.2s ease-out;
}

nav ul a:hover {
	background : #992E22;
	color      : #fff;
}

nav ul li {
	flex       : 1 100%;
	text-align : center;
}

nav ul li:not(:first-child) {
	border-left : 1px solid rgba(0,0,0,0.1);
}

nav ul li:not(:last-child) {
	border-right : 1px solid rgba(255,255,255,0.3);
}

p {
	font-size   : 1.5em;
	line-height : 1.5em;
	margin      : 0;
}

.project-details {
	display   : flex;
	flex-flow : row wrap;
}

.project-title {
	color     : ;
	display   : inline-block;
	font-size : 2em;
}

#projects > section {
	margin  : 0 0 10px;
	padding : 10px;
}

#projects {
	display   : flex;
	flex-flow : column wrap;
}

section {
	display : block;
}

.skills {
	display : flex;
	font-size : 1.5em;
}

.skills > li:not(:first-child) {
	margin : 0 0 0 1em;
}

.title {
	font-size  : 2.75em;
	margin     : 0 0 0.25em;
	text-align : center;
}

#wrapper {
	display   : flex;
	flex      : 100% 0;
	flex-flow : row wrap;
	margin    : auto;
}

#wrapper > article {
	flex    : 1 100%;
	padding : 1em 1.5em;
}

@media all and (min-width : 768px) {
	#wrapper > article {
		padding : 10px 3em;
	}
}

@media all and (min-width : 1024px) {
	#contact-form {
		max-width : 480px;
	}

	#contact-form button[type="submit"] {
		float : right;
		width : 50%;
	}

	figcaption {
		font-size : 1.1em;
	}

	nav ul {
		justify-content : flex-end;
	}

	nav ul li {
		flex : none;
	}

	nav ul li:not(:first-child),
	nav ul li:not(:last-child) {
		border : none;
	}

	p {
		font-size   : 2em;
		line-height : 1.25em;
	}

	.project-description {
		margin : 0 0 0 10px;
	}

	.project-details {
		display   : flex;
		flex-flow : row;
	}

	.project-details > * {
		flex : 1 100%;
	}

	.project-title {
		font-size : 3em;
	}

	.title {
		font-size : 4em;
		margin    : 10px 0.5em -10px;
	}
}

@media screen and (min-width : 1280px) {
	#projects > section:nth-child(even) {
		border-left : 2px solid #eee;
	}

	#projects {
		flex-flow : row wrap;
	}

	#projects > section {
		flex : 50% 0;
	}
}

